--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   image_cropper:
   validators:
   provider:
-  infinite_scroll_pagination: 
   expandable_text:
+  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
